fix weather data width on mobile

--- a/SUPcheck/src/components/Footer/Footer.scss
+++ b/SUPcheck/src/components/Footer/Footer.scss
@@ -4,5 +4,10 @@
 .footer {
     display: flex;
     justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
     margin: 3rem auto 2rem;
+    @include desktop {
+        flex-direction: row
+    }
 }
