--- a/SUPcheck/src/components/WeatherInfo/WeatherInfo.scss
+++ b/SUPcheck/src/components/WeatherInfo/WeatherInfo.scss
@@ -117,9 +117,11 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
-    width: 80%;
+    width: 100%;
     margin: 3rem auto 0;
-
+@include tablet {
+    width: 80%;
+}
     @include desktop {
       flex-direction: row;
     }
